# arkanoid

./: CMakeLists.txt  check.c  check.h  init.c  init.h  main.c  object.c  object.h  render.c  render.h  type.h  update.c  update.h
Arkanoid2024_prof/: .gitignore  CMakeLists.txt  arkanoid.c
